# gimle-taskviewer

./: .gitignore  README.md  pyproject.toml
src/task_viewer/: __init__.py  app.py  cli.py  discovery.py  groom.py  state_ops.py  workspace.py
tests/: conftest.py  test_app.py  test_discovery.py  test_groom.py  test_state_ops.py  test_workspace.py
