[project]
name = "gimle-taskviewer"
version = "0.1.0"
description = "A terminal UI for browsing the markdown task files in a gimle project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86",
    "pyyaml>=6.0",
]

[project.scripts]
tv = "task_viewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_viewer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "textual-dev>=1.5",
]
